testsuite/tests/typing-layouts/parsing_alpha.compilers.reference
type 'a t0 = 'a list
type ('a : immediate) t0 = 'a list
Line 2, characters 22-24:
2 | type ('a : void) t0 = 'a list;;
                          ^^
Error: This type ('a : value) should be an instance of type ('a0 : void)
       'a has layout void, which does not overlap with value.
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Syntax error: layout expected.
type t = float#
Line 2, characters 9-13:
2 | type t = int#;;
             ^^^^
Error: Syntax error: Unboxed type other than float# not expected.
Line 2, characters 9-17:
2 | type t = Float.t#;;
             ^^^^^^^^
Error: Syntax error: Unboxed type other than float# not expected.

